codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__recovered_answer_cancels_vim_search.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5347
expression: terminal.backend()
---
"────────────────────────────────────────"
"❯ existing draft                        "
"  answer                                "
"                                        "
"                                        "
"                                        "
"                                        "
"────────────────────────────────────────"
"       100% context left | Vim: Normal  "
